samples/_failures_safe/1761169874_1facac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55d9b063.c: In function ‘main’:
./samples/SAFE/__tmp_55d9b063.c:164:9: error: expected declaration or statement at end of input
  164 |         if (!read_safe_input(input, sizeof(input))) {
      |         ^~
./samples/SAFE/__tmp_55d9b063.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55d9b063.c:164:9: error: expected declaration or statement at end of input
